# Decentralised-Solana-Poll

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  START_HERE.md  TASKS_COMPLETED.md  TASK_SUMMARY.md  fix-errors.sh  next.config.ts  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  codama.js
anchor/programs/counter/src/: lib.rs
anchor/programs/poll/: Cargo.toml
anchor/programs/poll/src/: error.rs  lib.rs
anchor/programs/poll/src/instructions/: close_poll.rs  create_poll.rs  mod.rs
anchor/programs/poll/tests/: poll.ts
anchor/src/: counter-exports.ts
anchor/tests/: counter.test.ts  poll.ts
app/: README.md  layout.tsx  page.tsx
app/components/: CreatePollForm.tsx  PollList.tsx  WalletSection.tsx  index.ts
app/hooks/: index.ts  usePoll.ts  useWallet.ts
app/types/: poll.ts
app/utils/: helpers.ts
lib/: anchorClient.ts
lib/idl/: poll.json  poll.ts  poll_old.ts
programs/poll/: README.md
programs/poll/src/: lib.rs  state.rs
programs/poll/src/instructions/: cast_vote.rs  mod.rs
src/app/: layout.tsx
src/app/counter/: page.tsx
src/app/poll/: page.tsx
src/components/: app-header.tsx
src/features/counter/: counter-feature.tsx
src/features/counter/data-access/: use-counter-accounts-invalidate.ts  use-counter-accounts-query-key.ts  use-counter-accounts-query.ts  use-counter-close-mutation.ts  use-counter-decrement-mutation.ts  use-counter-increment-mutation.ts  use-counter-initialize-mutation.ts  use-counter-program.ts  (+1 more)
src/features/dashboard/: dashboard-feature.tsx
src/features/poll/: poll-feature.tsx
(+10 files in other folders)
