[package]
name = "poll"
version = "0.1.0"
description = "Decentralized Solana Poll Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poll"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
